Ensure footer doesn't overlap with options (preventing them from being selected)

--- a/style/screen.css
+++ b/style/screen.css
@@ -14,7 +14,7 @@ body {
 
 #title {
     width: 100%;
-    height: 80px;
+    height: 60px;
     font-size: 30px;
     text-align: center;
 }
